Fixed navbar alignment: centered search, inline shop/cart

--- a/cqp.css
+++ b/cqp.css
@@ -31,6 +31,7 @@ a {
 .navbar-center {
     display: flex;
     justify-content: center;
+    flex-grow: 1; /* Ensures it takes available space */
 }
 
 /* Search group width control */
